.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Post_Cost__c.object
<CustomObject>
    <description>Public Sector Payroll
Use to manage costs associated with Posts</description>
    <fields>
        <fullName>xcdhcm__Cost_centre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select to apply Cost Centre code to payroll costs associated with this Post</inlineHelpText>
        <label>Cost centre</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Cost_centre__c.xcdhcm__Code_type__c</field>
                <operation>equals</operation>
                <value>Post</value>
            </filterItems>
            <filterItems>
                <field>xcdhcm__Cost_centre__c.xcdhcm__No_longer_in_use__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select all to show records no longer in use</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Cost_centre__c</referenceTo>
        <relationshipLabel>Posts Using Code</relationshipLabel>
        <relationshipName>Post_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_code__c</fullName>
        <inlineHelpText>Enter cost code associated with this Post</inlineHelpText>
        <label>Cost code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_percent__c</fullName>
        <defaultValue>1.00</defaultValue>
        <inlineHelpText>Enter the percentage of Post costs to which this code applies</inlineHelpText>
        <label>Cost %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post__c</fullName>
        <label>Post</label>
        <referenceTo>xcdhcm__Post__c</referenceTo>
        <relationshipLabel>Post Costs</relationshipLabel>
        <relationshipName>Post_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Post Cost</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Post cost</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Cost_Centre_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>and( 
not(isblank(xcdhcm__Cost_centre__c )), 
not(isblank( xcdhcm__Cost_code__c )), 
  xcdhcm__Cost_centre__r.xcdhcm__Cost_centre__c &lt;&gt; xcdhcm__Cost_code__c )</errorConditionFormula>
        <errorMessage>As you have selected a Cost Centre, Cost code must be set equal to the Cost code as on the Cost Centre.  Please set Cost code blank and it will be completed automatically</errorMessage>
    </validationRules>
</CustomObject>